--- a/Algos/Makefile.win
+++ b/Algos/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = Algos/ArrayUtilities.o Algos/BubbleSort.o Algos/LargestSumContiguousSubArray.o Algos/LinearSearch.o Algos/main.o Algos/MajorityElement.o Algos/NumberOddOccurence.o Algos/PairWithSumInArray.o Algos/SearchInSortedPivotedArray.o Algos/Utilities.o
-LINKOBJ  = Algos/ArrayUtilities.o Algos/BubbleSort.o Algos/LargestSumContiguousSubArray.o Algos/LinearSearch.o Algos/main.o Algos/MajorityElement.o Algos/NumberOddOccurence.o Algos/PairWithSumInArray.o Algos/SearchInSortedPivotedArray.o Algos/Utilities.o
+OBJ      = Algos/ArrayUtilities.o Algos/BubbleSort.o Algos/LargestSumContiguousSubArray.o Algos/LinearSearch.o Algos/main.o Algos/MajorityElement.o Algos/NumberOddOccurence.o Algos/PairWithSumInArray.o Algos/SearchInSortedPivotedArray.o Algos/Utilities.o Algos/IdenticalTrees.o Algos/TreeHeight.o Algos/TreeSize.o Algos/TreeUtilities.o Algos/DeleteTree.o Algos/BuildMirror.o
+LINKOBJ  = Algos/ArrayUtilities.o Algos/BubbleSort.o Algos/LargestSumContiguousSubArray.o Algos/LinearSearch.o Algos/main.o Algos/MajorityElement.o Algos/NumberOddOccurence.o Algos/PairWithSumInArray.o Algos/SearchInSortedPivotedArray.o Algos/Utilities.o Algos/IdenticalTrees.o Algos/TreeHeight.o Algos/TreeSize.o Algos/TreeUtilities.o Algos/DeleteTree.o Algos/BuildMirror.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.8.1/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.8.1/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.8.1/include/c++"
@@ -53,3 +53,21 @@ Algos/SearchInSortedPivotedArray.o: Algos/SearchInSortedPivotedArray.cpp
 
 Algos/Utilities.o: Algos/Utilities.cpp
 	$(CPP) -c Algos/Utilities.cpp -o Algos/Utilities.o $(CXXFLAGS)
+
+Algos/IdenticalTrees.o: Algos/IdenticalTrees.cpp
+	$(CPP) -c Algos/IdenticalTrees.cpp -o Algos/IdenticalTrees.o $(CXXFLAGS)
+
+Algos/TreeHeight.o: Algos/TreeHeight.cpp
+	$(CPP) -c Algos/TreeHeight.cpp -o Algos/TreeHeight.o $(CXXFLAGS)
+
+Algos/TreeSize.o: Algos/TreeSize.cpp
+	$(CPP) -c Algos/TreeSize.cpp -o Algos/TreeSize.o $(CXXFLAGS)
+
+Algos/TreeUtilities.o: Algos/TreeUtilities.cpp
+	$(CPP) -c Algos/TreeUtilities.cpp -o Algos/TreeUtilities.o $(CXXFLAGS)
+
+Algos/DeleteTree.o: Algos/DeleteTree.cpp
+	$(CPP) -c Algos/DeleteTree.cpp -o Algos/DeleteTree.o $(CXXFLAGS)
+
+Algos/BuildMirror.o: Algos/BuildMirror.cpp
+	$(CPP) -c Algos/BuildMirror.cpp -o Algos/BuildMirror.o $(CXXFLAGS)
